Ma Carte version mobile : bug flip de la carte. Ajout gestion de la rotation en mode paysage pour afficher la carte en entier

--- a/resources/assets/sass/macarte.scss
+++ b/resources/assets/sass/macarte.scss
@@ -1,6 +1,23 @@
 #macarte {
-    width: 100%;
-    height: 100%;
+   /* width: 100%;
+    height: 100%;*/
     display: block;
-    height: 95% !important;
+   /* height: 95% !important;*/
 }
+
+
+
+@media screen and (min-width: 320px) and (max-width: 812px) and (orientation:landscape) {
+
+    html.mycard {
+        transform: rotate(-90deg);
+        transform-origin: left top;
+        width: 100vh !important;
+        height: 100vw !important;
+        overflow-x: hidden;
+        position: absolute;
+        top: 100%;
+        left: 0;
+      }
+   
+  }
